// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bodify should accept Headers 1`] = `
Array [
  "/api",
  Object {
    "body": "{}",
    "headers": Object {
      "a": "1, 2",
      "content-type": "application/json",
    },
  },
]
`;

exports[`bodify should allow custom content-type 1`] = `
Array [
  "/api",
  Object {
    "body": URLSearchParams: "",
    "headers": Object {
      "content-type": "application/vnd.org+form",
    },
  },
]
`;

exports[`bodify should allow custom content-type 2`] = `
Array [
  "/api",
  Object {
    "body": "{}",
    "headers": Object {
      "content-type": "application/vnd.org+json",
    },
  },
]
`;

exports[`bodify should not stringify with non-plain-object or non-array 1`] = `
Array [
  "/api",
  Object {
    "body": Foo {},
    "headers": Object {},
  },
]
`;

exports[`bodify should not stringify with non-plain-object or non-array 2`] = `
Array [
  "/api",
  Object {
    "body": FormData {},
    "headers": Object {},
  },
]
`;

exports[`bodify should not stringify with non-plain-object or non-array 3`] = `
Array [
  "/api",
  Object {
    "body": Map {},
    "headers": Object {},
  },
]
`;

exports[`bodify should not stringify with non-plain-object or non-array 4`] = `
Array [
  "/api",
  Object {
    "body": true,
    "headers": Object {},
  },
]
`;

exports[`bodify should not stringify with non-plain-object or non-array 5`] = `
Array [
  "/api",
  Object {
    "body": null,
    "headers": Object {},
  },
]
`;

exports[`bodify should stringify form 1`] = `
Array [
  "/api",
  Object {
    "body": URLSearchParams: "username=Jo+Jo&lang=%E4%B8%AD%E6%96%87&age=undefined",
    "headers": Object {
      "content-type": "application/x-www-form-urlencoded",
    },
  },
]
`;

exports[`bodify should stringify form 2`] = `
Array [
  "/api",
  Object {
    "body": URLSearchParams: "1=2&3=4",
    "headers": Object {
      "content-type": "application/x-www-form-urlencoded",
    },
  },
]
`;

exports[`bodify should stringify json 1`] = `
Array [
  "/api",
  Object {
    "body": "{\\"username\\":\\"Jo Jo\\",\\"lang\\":\\"中文\\"}",
    "headers": Object {
      "content-type": "application/json",
    },
  },
]
`;

exports[`bodify should stringify json 2`] = `
Array [
  "/api",
  Object {
    "body": "[[1,2],[3,4]]",
    "headers": Object {
      "content-type": "application/json",
    },
  },
]
`;

exports[`bodify should stringify json 3`] = `
Array [
  "/api",
  Object {
    "body": "{}",
    "headers": Object {
      "content-type": "application/json",
    },
  },
]
`;

exports[`bodify should stringify json 4`] = `
Array [
  "/api",
  Object {
    "body": "{}",
    "headers": Object {
      "content-type": "application/json",
    },
  },
]
`;

exports[`bodify should stringify json 5`] = `
Array [
  "/api",
  Object {
    "body": Object {},
    "headers": Object {},
  },
]
`;

exports[`bodify should work without options 1`] = `
Array [
  "/api",
  Object {
    "body": undefined,
    "headers": Object {},
  },
]
`;
